--- a/doc/src/components/Header.astro
+++ b/doc/src/components/Header.astro
@@ -234,11 +234,9 @@
 		.header-right {
 			position: absolute;
 			top: 100%;
-			left: 50%;
-			right: 50%;
-			margin-left: -50vw;
-			margin-right: -50vw;
-			width: 100vw;
+			left: 0;
+			right: 0;
+			width: 100%;
 			background-color: var(--color-bg-primary);
 			border: 1px solid var(--color-border);
 			border-top: none;
@@ -259,6 +257,8 @@
 			transform: translateY(0);
 			opacity: 1;
 			visibility: visible;
+			width: 100%;
+			box-sizing: border-box;
 		}
 
 		.header-right.open .main-nav {
