--- a/doc/src/components/Header.astro
+++ b/doc/src/components/Header.astro
@@ -106,6 +106,7 @@
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 		background-clip: text;
+		text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12); /* More visible but still subtle */
 	}
 
 	/* Navigation */
