--- a/doc/src/pages/index.astro
+++ b/doc/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Hero from '../components/Hero.astro';
+import InnerWorkings from '../components/InnerWorkings.astro';
 
 const url = new URL(Astro.request.url);
 const defaultTab = url.searchParams.get('tab') || url.searchParams.get('default') || 'react';
@@ -8,4 +9,5 @@ const defaultTab = url.searchParams.get('tab') || url.searchParams.get('default'
 
 <BaseLayout title="use-simple-debounce - Simple, dependency-free debouncing for modern web development">
 	<Hero defaultTab={defaultTab} />
+	<InnerWorkings defaultOpen={defaultTab} />
 </BaseLayout>
