--- a/doc/src/components/Footer.astro
+++ b/doc/src/components/Footer.astro
@@ -6,7 +6,11 @@
 	<div class="container">
 		<div class="footer-content">
 			<p>&copy; 2025 use-simple-debounce. MIT License.</p>
-			<p><a href="https://jujiyangasli.com" target="_blank" rel="noopener noreferrer">jujiyangasli.com</a></p>
+			<p>
+				<a href="https://www.npmjs.com/package/use-simple-debounce" target="_blank" rel="noopener noreferrer">npm</a>&nbsp; | &nbsp;
+				<a href="https://github.com/jujiyangasli/use-simple-debounce" target="_blank" rel="noopener noreferrer">github</a>&nbsp; | &nbsp;
+				<a href="https://jujiyangasli.com" target="_blank" rel="noopener noreferrer">jujiyangasli.com</a>
+			</p>
 		</div>
 	</div>
 </footer>
