--- a/doc/src/components/InnerWorkings.astro
+++ b/doc/src/components/InnerWorkings.astro
@@ -272,6 +272,7 @@ const activeTabIndex = defaultTabIndex >= 0 ? defaultTabIndex : 0;
     line-height: 1.6;
     max-width: 600px;
     margin: 0 0;
+    font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
   }
 
   .inner-workings-visual {
