Add version numbers to header logos
- Update docv3 header to show 'use-simple-debounce v3'
- Update doc header to show 'use-simple-debounce v2'
- Both documentation sites now clearly indicate their version

--- a/doc/src/components/Header.astro
+++ b/doc/src/components/Header.astro
@@ -6,7 +6,7 @@
 	<div class="header-content">
 		<div class="logo">
 			<a href="/" class="logo-link">
-				<span class="logo-text">use-simple-debounce</span>
+				<span class="logo-text">use-simple-debounce v2</span>
 			</a>
 		</div>
 
