--- a/docv3/src/components/Header.astro
+++ b/docv3/src/components/Header.astro
@@ -6,7 +6,7 @@
 	<div class="header-content">
 		<div class="logo">
 			<a href="/" class="logo-link">
-				<span class="logo-text">use-simple-debounce</span>
+				<span class="logo-text">use-simple-debounce v3</span>
 			</a>
 		</div>
 
